Allow recursively to narrow a region.

--- a/README
+++ b/README
@@ -57,9 +57,10 @@ combination to open that selection in a new buffer.
 
                                                                 *:WidenRegion*
 :WidenRegion                This command is only available in the narrowed 
-                            scratch buffer. If the buffer has been modified,
+                            scratch window. If the buffer has been modified,
                             the contents will be put back on the original
-                            buffer.
+                            buffer. If it isn't modified, closes the scratch
+                            window.
 
                                                                         *:NRV*
 :NRW                        Opened the narrowed window for the region that was
@@ -72,6 +73,19 @@ default is set to '\', unless you have set it to something different (see
 |<Leader>| for information how to change this) and the selected range will
 open in a new scratch buffer. This key combination only works in |Visual-mode|
 
+When finished, simply write that Narrowed Region window, from which you want
+to take the modifications in your original file. 
+
+It is possible, to recursively open a Narrowed Window on top of an already
+narrowed window. This sounds a little bit silly, but this makes it possible,
+to have several narrowed windows, which you can use for several different
+things, e.g. If you have 2 different buffers opened and you want to diff a
+certain region of each of those 2 buffers, simply open a Narrowed Window for
+each buffer, and execute |:diffthis| in each narrowed window. 
+
+You can then interactively merge those 2 windows. And when you are finished,
+simply write the narrowed window and the changes will be taken back into the
+original buffer.
 ==============================================================================
 2.1 NrrwRgn Configuration                                    *NrrwRgn-config*
 
@@ -91,7 +105,7 @@ width or the nr of columns, if you have also set g:nrrw_rgn_vert. >
 <
 ------------------------------------------------------------------------------
 
-By default, NarrowRegion highlights your the region that has been selected
+By default, NarrowRegion highlights the region that has been selected
 using the WildMenu highlighting (see |hl-WildMenu|). If you'd like to use a
 different highlighting, set the variable g:nrrw_rgn_hl to your preferred
 highlighting Group. For example to have the region highlighted like a search
@@ -115,24 +129,6 @@ This will let <F3> open the Narrow-Window, but only if you have pressed it in
 Visual Mode. It doesn't really make sense to map this combination to any other
 mode, unless you want it to Narrow your last visually selected range.
 
-------------------------------------------------------------------------------
-
-By default the Narrow Region plugin will always use the same window for
-narrowing regions. Now you can force the plugin to create a new window, each
-time you issue :NarrowRegion. To enable this, simple set the g:nrrw_rgn_sepwin
-variable to 1 >
-
-    let g:nrrw_rgn_sepwin = 1
-<
-This can be usefull, if you have 2 files, in which you want to diff and merge
-only some regions. So in each buffer you run |:NarrowRegion| and the plugin will
-create 2 separate Windows which you can easily diff, using |:diffthis| and you
-can merge the changes using |:diffget| and |:diffput|.
-Note, this is still an experimenal feature. Please report any bugs (see
-below!)
-
-When finished, simply write that Narrowed Region window, from which you want
-to take the modifications in your original file. 
 ==============================================================================
 3. NrrwRgn Feedback                                         *NrrwRgn-feedback*
 
@@ -148,56 +144,67 @@ third line of this document.
 
 ==============================================================================
 4. NrrwRgn History                                          *NrrwRgn-history*
-        0.8: May 18, 2010       - the g:nrrw_rgn_sepwin variable can be
-                                  used to force seperate Narrowed Windows, so
-                                  you could easily diff those windows.
-                                - make the separating of several windows a
-                                  little bit safer (look at the bufnr(), so it
-                                  should work without problems for several
-                                  buffers)
-                                - switch from script local variables to 
-                                  buffer local variables, so narrowing for
-                                  several buffers should work.
-                                - set 'winfixheight' for narrowed window 
-                                - Added command :NRV (suggested by Charles
-                                  Campbell, thanks!)
-                                - added error handling, in case :NRV is
-                                  called, without a selected region
-                                - take care of beeps, when calling :NRV
-                                - output WarningMsg
-        0.7: May 17, 2010       - really use the black hole register for
-                                  deleting the old buffer contents in the
-                                  narrowed buffer (suggestion by esquifit in 
-                                  http://groups.google.com/group/comp.editors/msg/3eb3e3a7c68597db)
-                                - make autocommand nesting, so the
-                                  highlighting will be removed when writing
-                                  the buffer contents.
-                                - Use g:nrrw_rgn_nohl variable to disable 
-                                  highlighting (as this can be disturbing).
-        0.6: May 04, 2010       - the previous version had problems
-                                  restoring the orig buffer, this version
-                                  fixes it (highlighting and setl ma did not
-                                  work correctly)
-        0.5: May 04, 2010       - The mapping that allows for narrowing a
-                                  visually selected range, did not work.
-                                  (Fixed!)
-                                - Make :WidenRegion work as expected (close
-                                  the widened window)
-                                  (unreleased)
-        0.4: Apr 28, 2010       - Highlight narrowed region in the original
-                                  buffer
-                                - Save and Restore search-register
-                                - Provide shortcut commands |:NR| 
-                                - Provide command |:NW| and |:NarrowWindow|
-                                - Make plugin autoloadable
-                                - Enable GLVS (see |:GLVS|)
-                                - Provide Documenation (:h NarrowRegion)
-                                - Distribute Plugin as vimball |pi_vimball.txt|
-        0.3: Apr 28, 2010       - Initial upload
-                                - development versions are available at the
-                                  github repository
-                                - put plugin on a public repository 
-                                  (http://github.com/chrisbra/NrrwRgn)
+
+0.9: May 20, 2010
+
+- It is now possible to Narrow a window recursively. This allows to have
+  several narrowed windows, and allows for example to only diff certain
+  regions (as was suggested in a recent thread at the vim_use mailinglist:
+  http://groups.google.com/group/vim_use/msg/05d7fd9bd1556f0e) therefore, the
+  use for the g:nrrw_rgn_sepwin variable isn't necessary anymore.
+- Small documentation updates
+
+0.8: May 18, 2010
+
+- the g:nrrw_rgn_sepwin variable can be used to force seperate Narrowed
+  Windows, so you could easily diff those windows.
+- make the separating of several windows a little bit safer (look at the
+  bufnr(), so it should work without problems for several buffers)
+- switch from script local variables to buffer local variables, so narrowing
+  for several buffers should work.
+- set 'winfixheight' for narrowed window 
+- Added command :NRV (suggested by Charles Campbell, thanks!)
+- added error handling, in case :NRV is called, without a selected region
+- take care of beeps, when calling :NRV
+- output WarningMsg
+
+0.7: May 17, 2010
+
+- really use the black hole register for deleting the old buffer contents in
+  the narrowed buffer (suggestion by esquifit in
+  http://groups.google.com/group/comp.editors/msg/3eb3e3a7c68597db)
+- make autocommand nesting, so the highlighting will be removed when writing
+  the buffer contents.
+- Use g:nrrw_rgn_nohl variable to disable highlighting (as this can be
+  disturbing).
+
+0.6: May 04, 2010
+
+- the previous version had problems restoring the orig buffer, this version
+  fixes it (highlighting and setl ma did not work correctly)
+
+0.5: May 04, 2010       
+
+- The mapping that allows for narrowing a visually selected range, did not
+  work.  (Fixed!)
+- Make :WidenRegion work as expected (close the widened window) (unreleased)
+
+0.4: Apr 28, 2010       
+
+- Highlight narrowed region in the original buffer
+- Save and Restore search-register
+- Provide shortcut commands |:NR| 
+- Provide command |:NW| and |:NarrowWindow|
+- Make plugin autoloadable
+- Enable GLVS (see |:GLVS|)
+- Provide Documenation (:h NarrowRegion)
+- Distribute Plugin as vimball |pi_vimball.txt|
+
+0.3: Apr 28, 2010       
+
+- Initial upload
+- development versions are available at the github repository
+- put plugin on a public repository (http://github.com/chrisbra/NrrwRgn)
 
 ==============================================================================
 Modeline:
