--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 *NrrwRgn.txt*   A Narrow Region Plugin (similar to Emacs)
 
 Author:  Christian Brabandt <cb@256bit.org>
-Version: 0.22 Mon, 24 Oct 2011 21:19:47 +0200
+Version: 0.24 Mon, 24 Oct 2011 21:26:45 +0200
 
 Copyright: (c) 2009, 2010 by Christian Brabandt         
            The VIM LICENSE applies to NrrwRgnPlugin.vim and NrrwRgnPlugin.txt
@@ -287,6 +287,14 @@ third line of this document.
 4. NrrwRgn History                                          *NrrwRgn-history*
 
 
+0.24: Oct 24, 2011 {{{1
+
+- error on vim.org page, reuploaded version 0.22 as 0.24
+
+0.23: Oct 24, 2011 {{{1
+
+- (wrongly uploaded to vim.org)
+  
 0.22: Oct 24, 2011 {{{1
 
 - Allow customization via the use of hooks (|NR-hooks|)
