updated todo list

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,5 @@
 (issues to work on, in the order of importance):
 
-- New Mapping. The motion over which one moves will be opened in a narrowed window.
-
-- Use nrrwrgn#NrrwRgnStatus() to make a nice statusline for e.g. vim-airline
-
 - When disabling Narrowing using :NRN and one quits the buffer,
   should the highlighting be removed? (it doesn't yet)
 
@@ -14,10 +10,20 @@
     variable
   * Multi line narrowing
 
-- Implement MultiEditing for :NRM
-  (see https://github.com/felixr/vim-multiedit/blob/master/plugin/multiedit.vim
-   and http://blog.felixriedel.com/2012/06/multi-editing-in-vim/)
-
 ### Resolved
 - When switching buffers using :b in the window, that was narrowed, the highlighting is keept.
   (should be resolved)
+
+- highlighting wrong for char visual mode
+ (e.g. select a word, press \nr and the whole line will be highlighted)
+
+- Use nrrwrgn#NrrwRgnStatus() to make a nice statusline for e.g. vim-airline
+-> latest airline supports a nice statusline for narrowed window
+
+- Implement MultiEditing for :NRM
+  (see https://github.com/felixr/vim-multiedit/blob/master/plugin/multiedit.vim
+   and http://blog.felixriedel.com/2012/06/multi-editing-in-vim/)
+  -> Invalid: multiple cursors is different, not part of a narrowed feature
+
+- New Mapping. The motion over which one moves will be opened in a narrowed window.
+  -> <leader>nr in normal mode
